# PRozp_projekt

./: .gitignore
algorytm/: algor.tex
code/: .gitignore  Makefile  nanozombie.code-workspace  run.sh  valgrind_run.sh
code/src/: communication_loop.c  communication_loop.h  cond_signal.c  cond_signal.h  debug.c  debug.h  globals.h  main.c  main_loop.c  main_loop.h  messages.c  messages.h  shared_var.c  shared_var.h  stack.c  stack.h  system_info.c  system_info.h  tourist.c  tourist.h
code_cpp/: gdb_workaround.sh
code_cpp/src/: .deploy.sh  .gitignore  CMakeLists.txt  Makefile  communication_loop.cpp  communication_loop.h  compile.sh  compile_deploy_run.sh  compile_lab.sh  compile_local.sh  condition_var.cpp  condition_var.h  debug.cpp  debug.h  deploy_run_home_mpi.sh  home_hosts  lab_hosts  main.cpp  main_loop.cpp  main_loop.h  packet.cpp  packet.h  queues_submarie.cpp  queues_submarine.cpp  queues_submarine.h  run.sh  run_lab.sh  run_local.sh  shared_var.h  shared_var.hxx  shared_vector.h  shared_vector.hxx  system_info.cpp  system_info.h  tourist.cpp  tourist.h  valgrind_run.sh
sprawozdanie/: __latexindent_temp.tex  sprawozdanie.tex
